--- a/status.html
+++ b/status.html
@@ -2,150 +2,72 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>QuickMath 🌟</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>QuickMath</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-    /* فونت فارسی و Orbitron برای عنوان */
     @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
     body {
       margin:0; padding:0;
       font-family:'Vazirmatn',sans-serif;
+      direction:rtl; color:#fff;
       background: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/273126115942507.6067070353764.gif') center/cover no-repeat;
-      color:#fff;
-      direction: rtl;
       overflow-x:hidden;
+      text-align:center;
     }
 
     h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 4rem;
-      text-align: center;
-      margin-top: 40px;
+      font-family:'Orbitron',sans-serif;
+      font-size:4rem; margin-top:40px;
       animation: glowTitle 3s ease-in-out infinite alternate;
-      text-shadow:
-        0 0 10px rgba(0,255,255,0.8),
-        0 0 20px rgba(0,255,255,0.6),
-        0 0 30px rgba(0,170,255,0.4);
+      text-shadow:0 0 10px rgba(0,255,255,0.8),
+                  0 0 20px rgba(0,255,255,0.6),
+                  0 0 30px rgba(0,170,255,0.4);
     }
     @keyframes glowTitle {
-      from {
-        color: #0ff;
-        text-shadow: 0 0 10px #0ff, 0 0 20px #0ff;
-      }
-      to {
-        color: #8ff;
-        text-shadow: 0 0 20px #8ff, 0 0 40px #0ff, 0 0 60px #08f;
-      }
+      from { color:#0ff; text-shadow:0 0 10px #0ff,0 0 20px #0ff; }
+      to   { color:#8ff; text-shadow:0 0 20px #8ff,0 0 40px #0ff,0 0 60px #08f; }
     }
 
-    .container { display:flex; justify-content:center; gap:40px; margin:60px auto; }
-
-    .server-box {
-      position:relative;
-      width:200px; height:120px;
-      border:3px solid cyan;
-      border-radius:12px;
-      background-size:cover;
-      background-position:center;
-      box-shadow: 0 0 10px cyan, 0 0 20px cyan;
-      cursor: pointer;
-      overflow:hidden;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .server-box:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #0ff, 0 0 40px cyan;
-    }
-    .server-box span {
-      position:absolute; inset:0;
-      display:flex; align-items:center; justify-content:center;
-      font-size:1.3rem;
-      color:#0ff;
-      background: rgba(0,0,0,0.3);
-    }
-    .server1 { background-image:url('https://4kwallpapers.com/images/walls/thumbs_2t/11129.png'); }
-    .server2 { background-image:url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQvnj_wYSNBI2wjdrooFAQVFYNoFNF8N3MgCGc04hwRikoMEtFEZzNkxOE05T97OfHxNl8&usqp=CAU'); }
-
-    .modal {
-      position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
-      background: rgba(0,0,0,0.8);
-      border:2px solid cyan;
-      padding:20px;
-      border-radius:12px;
-      display:none;
-      color:#fff;
-      text-align:center;
-      width:260px;
-    }
-    .modal button {
-      margin-top:12px;
-      padding:10px 20px;
-      font-size:1rem;
-      background: cyan;
-      border:none;
-      border-radius:6px;
-      color:#000;
-      cursor:pointer;
-      transition: background 0.3s;
-    }
-    .modal button:hover { background:#0ff; }
-
-    .message {
-      margin-top:16px;
-      font-size:1.1rem;
-      font-weight:bold;
-    }
-
-    /* پنل کاربری */
     .user-btn {
       position:fixed; top:20px; right:20px;
       padding:10px 14px;
       font-family:'Orbitron',sans-serif;
-      color: #0ff;
-      border:2px solid #0ff;
-      border-radius:6px;
-      cursor: pointer;
+      color:#0ff; border:2px solid #0ff; border-radius:6px;
+      cursor:pointer; z-index:10;
       animation: glowBtn 2s ease-in-out infinite alternate;
-      z-index:10;
     }
     @keyframes glowBtn {
-      from { box-shadow: 0 0 8px #0ff; }
-      to   { box-shadow: 0 0 16px cyan, 0 0 24px #08f; }
+      from { box-shadow:0 0 8px #0ff; }
+      to   { box-shadow:0 0 16px cyan,0 0 24px #08f; }
     }
 
     .user-panel {
       position:fixed; top:60px; right:20px;
-      width:240px; background: rgba(0,255,255,0.1);
-      border:2px solid #0ff;
+      width:260px; background:rgba(0,255,255,0.1);
+      border:2px solid #0ff; border-radius:12px;
       backdrop-filter:blur(8px);
-      border-radius:12px;
-      padding:16px;
-      color:#000;
-      display:none;
-      z-index:9;
+      padding:16px; color:#000;
+      display:none; z-index:9;
     }
     .user-panel .close-btn {
       position:absolute; top:8px; left:8px;
-      background:#000; color:#f00;
-      border:none; font-size:1.1rem;
-      cursor:pointer;
+      background:#000; color:#f00; border:none;
+      font-size:1.2rem; cursor:pointer;
     }
-    .user-panel div {
-      margin:8px 0;
-    }
+    .user-panel div { margin:8px 0; font-size:1rem; }
 
     .footnote {
       position:fixed; bottom:16px; width:100%;
-      text-align:center; font-size:1rem;
-      color:#f00;
-      text-shadow: 0 0 5px red;
+      font-size:1rem; color:#f00; text-shadow:0 0 5px red;
     }
+
+    .container { display:flex; justify-content:center; gap:40px; margin:60px auto; }
+
   </style>
 </head>
 <body>
-
   <button class="user-btn">پنل کاربری</button>
   <div class="user-panel">
     <button class="close-btn">×</button>
@@ -155,46 +77,73 @@
   </div>
 
   <h1>QuickMath</h1>
-
   <div class="container">
-    <div class="server-box server1" onclick="chooseServer(1)"><span>سرور اول</span></div>
-    <div class="server-box server2" onclick="chooseServer(2)"><span>سرور دوم</span></div>
-  </div>
-
-  <div class="modal" id="modal">
-    <div>آیا اتصال به این سرور را تأیید می‌کنید؟</div>
-    <button onclick="confirmConnection()">تأیید</button>
-    <div id="msg" class="message"></div>
+    <!-- بخش راست -->
+    <div style="flex:1">
+      <!-- محتوای Right code-->
+      <div class="server-box" id="rightBox" style="max-width:400px;margin:auto;">
+        <div class="wifi-icon" id="wifiIconR">
+          <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="">
+        </div>
+        <h2 id="statusTitleR" class="status-default">کلیک کنید</h2>
+        <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
+        <button class="connect-btn" onclick="startConnR()">اتصال</button>
+        <div id="msgR" class="message-box">در حال بررسی وضعیت سرور...</div>
+      </div>
+    </div>
+    <!-- بخش چپ -->
+    <div style="flex:1">
+      <!-- محتوای Left code-->
+      <div class="server-box" id="leftBox" style="border:4px solid; animation:rgb-border 4s linear infinite; max-width:400px; margin:auto;">
+        <div class="wifi-icon" id="wifiIconL">
+          <img src="https://cdn-icons-png.flaticon.com/512/8603/8603448.png" alt="">
+        </div>
+        <h2 id="statusTitleL" class="status-default">کلیک کنید</h2>
+        <p class="alert">⛔ برای اتصال به ادمین پیام بدهید</p>
+        <button class="connect-btn" onclick="startConnL()">اتصال</button>
+        <div id="msgL" class="message-box">در حال بررسی وضعیت سرور...</div>
+      </div>
+    </div>
   </div>
 
   <div class="footnote">برای اتصال به سرورها به ادمین پیام دهید!</div>
 
 <script>
-  let selected = null;
-  function chooseServer(n) {
-    selected = n;
-    document.getElementById('msg').textContent = '';
-    document.getElementById('modal').style.display = 'block';
-  }
-  function confirmConnection() {
-    const msg = document.getElementById('msg');
-    if (selected === 1) {
-      msg.textContent = 'در حال اتصال...'; msg.style.color='lime';
-      setTimeout(() => { msg.textContent = 'اتصال قطع شد'; msg.style.color='red'; }, 4000);
-    }
-    else if (selected === 2) {
-      msg.textContent = 'در حال اتصال...'; msg.style.color='lime';
-      setTimeout(() => { msg.textContent = 'اتصال ممکن نیست'; msg.style.color='red'; }, 4000);
-    }
-  }
-  document.querySelector('.user-btn').onclick = () => {
+  document.querySelector('.user-btn').onclick = ()=>{
     const p = document.querySelector('.user-panel');
-    p.style.display = p.style.display === 'block' ? 'none' : 'block';
+    p.style.display = p.style.display==='block' ? 'none':'block';
   };
-  document.querySelector('.close-btn').onclick = () => {
+  document.querySelector('.close-btn').onclick = ()=>{
     document.querySelector('.user-panel').style.display = 'none';
   };
-</script>
 
+  function startConnR(){
+    const icon= document.getElementById('wifiIconR');
+    const title= document.getElementById('statusTitleR');
+    const msg = document.getElementById('msgR');
+    icon.classList.add('connecting');
+    title.textContent='در حال اتصال...'; title.className='status-connecting';
+    msg.style.display='block'; msg.textContent='لطفاً منتظر بمانید...';
+    setTimeout(()=>{
+      icon.classList.remove('connecting');
+      title.textContent='سرور آفلاین است!'; title.className='status-offline';
+      msg.textContent='⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
+    },3000);
+  }
+
+  function startConnL(){
+    const icon= document.getElementById('wifiIconL');
+    const title= document.getElementById('statusTitleL');
+    const msg = document.getElementById('msgL');
+    icon.classList.add('connecting');
+    title.textContent='در حال اتصال...'; title.className='status-connecting';
+    msg.style.display='block'; msg.textContent='لطفاً منتظر بمانید...';
+    setTimeout(()=>{
+      icon.classList.remove('connecting');
+      title.textContent='سرور آفلاین است!'; title.className='status-offline';
+      msg.textContent='⛔ اتصال ممکن نیست. سرور در حال حاضر آفلاین است.';
+    },3000);
+  }
+</script>
 </body>
 </html>
